# zen-space

./: README.md  launch.sh  main.py  pyproject.toml
app/: routes.py
app/static/: styles.css
app/static/js/: pop-up.js
app/templates/: chat.html
