[tool.poetry]
name = "zen-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.0"
flask = "^3.1.0"
gunicorn = "^23.0.0"
openai = "^1.70.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"